# pln-brca-xp

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  env.in
notebooks/: correlation.ipynb  moses_expr.py  requirements.txt  xgboost_brca_curated_pam50_v4.ipynb  xgboost_brca_curated_pos_v3.ipynb  xgboost_brca_curated_v2.ipynb  xgboost_brca_curated_v5.ipynb  xgboost_brca_curated_v6.ipynb  xgboost_brca_ensembles_v7.ipynb  xgboost_rfs_curated_cancer_v1.ipynb
pln-bio/: bio-utils.scm  bio-utils.scm.in  bp-deduction.scm  combo-preprocess.scm  concept-deduction.scm  expr.scm  intensional-similarity.scm  preprocess.scm  rule-utils.scm  similarity-xp.scm  ure-utils.scm
pln-bio/main/: go-intensional-similarity.scm
pln-bio/rules/: attraction-introduction.scm  extensional-similarity-direct-introduction.scm  extensional-similarity.scm  extensional-utils.scm  intensional-similarity-direct-introduction.scm  intensional-similarity.scm  rule-utils.scm  subset-direct-introduction.scm  subset-introduction.scm  subset-negation.scm  transitivity.scm  translation.scm
rules/: attraction-introduction.scm  extensional-similarity-direct-introduction.scm  intensional-similarity-direct-introduction.scm  intensional-similarity-property-deduction.scm  similar-genes-relating-to-aging.scm  subset-direct-introduction.scm  transitivity.scm  translation.scm
